--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
         }
 
         .sst-logo {
-            width: 80px;
-            height: 80px;
-            background: linear-gradient(45deg, #1e40af, #3b82f6);
-            border-radius: 50%;
-            margin: 0 auto 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 28px;
-            font-weight: bold;
-            box-shadow: 0 4px 20px rgba(30, 64, 175, 0.3);
-        }
+    max-width: 150px;        /* allows the logo to scale within limits */
+    width: 100%;
+    height: auto;
+    margin: 0 auto 20px;
+    display: block;
+}
+
+/* Optional: add responsiveness if you want to scale differently on smaller devices */
+@media (max-width: 768px) {
+    .sst-logo {
+        max-width: 120px;
+    }
+}
 
         .header h1 {
             color: #2d3748;
